coolstore/base/car-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cart
    demo: coolstore-microservice
    template: coolstore
  name: cart
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deploymentconfig: cart
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    type: Recreate
  template:
    metadata:
      labels:
        app: cart
        deploymentconfig: cart
      name: cart
    spec:
      containers:
      - env:
        - name: CATALOG_ENDPOINT
          value: http://catalog:8080
        - name: PRICING_ENDPOINT
          value: http://pricing:8080
        - name: KIE_CONTAINER_DEPLOYMENT
          value: CoolStoreRulesContainer=com.redhat:coolstore:2.0.0
        - name: KIE_SERVER_USER
          value: brmsAdmin
        - name: KIE_SERVER_PASSWORD
          value: vLcfkx3!
        image: image-registry.openshift-image-registry.svc:5000/coolstore/cart
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: cart
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 200Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 75
