coolstore/base/catalog-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: catalog
    demo: coolstore-microservice
    template: coolstore
  name: catalog
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deploymentconfig: catalog
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: catalog
        deploymentconfig: catalog
      name: catalog
    spec:
      containers:
      - env:
        - name: JWS_ADMIN_USERNAME
          value: Skq3VtCd
        - name: JWS_ADMIN_PASSWORD
          value: oktt6yhw
        - name: DB_USERNAME
          value: userjN7
        - name: DB_PASSWORD
          value: 5wySgxMW
        - name: DB_NAME
          value: catalogdb
        - name: DB_SERVER
          value: catalog-mongodb
        image: image-registry.openshift-image-registry.svc:5000/coolstore/catalog
        imagePullPolicy: Always
        name: catalog
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - curl -s -u Skq3VtCd:oktt6yhw 'http://localhost:8080/manager/jmxproxy/?get=Catalina%3Atype%3DServer&att=stateName'
              |grep -iq 'stateName *= *STARTED'
          failureThreshold: 10
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 600Mi
          requests:
            memory: 200Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 75
