coolstore/base/catalog-mongodb-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: catalog
    comp-type: database
    demo: coolstore-microservice
    template: coolstore
  name: catalog-mongodb
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deploymentconfig: catalog-mongodb
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
  template:
    metadata:
      labels:
        app: catalog
        comp-type: database
        deploymentconfig: catalog-mongodb
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: MONGODB_USER
          value: userjN7
        - name: MONGODB_PASSWORD
          value: 5wySgxMW
        - name: MONGODB_DATABASE
          value: catalogdb
        - name: MONGODB_ADMIN_PASSWORD
          value: 5wySgxMW
        image: registry.redhat.io/rhscl/mongodb-32-rhel7
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 27017
          timeoutSeconds: 1
        name: catalog-mongodb
        ports:
        - containerPort: 27017
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - mongo 127.0.0.1:27017/$MONGODB_DATABASE -u $MONGODB_USER -p $MONGODB_PASSWORD
              --eval="quit()"
          failureThreshold: 10
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 512Mi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mongodb/data
          name: mongodb-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mongodb-data
