coolstore/base/hystrix-dashboard-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: netflix
    component: hystrix-dashboard
    demo: coolstore-microservice
    template: coolstore
  name: hystrix-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: netflix
      component: hystrix-dashboard
      deploymentconfig: hystrix-dashboard
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: netflix
        component: hystrix-dashboard
        deploymentconfig: hystrix-dashboard
    spec:
      containers:
      - image: docker.io/siamaksade/hystrix-dashboard:1.0.27
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: hystrix-dashboard
        ports:
        - containerPort: 9779
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
