coolstore/base/inventory-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: inventory
    demo: coolstore-microservice
    template: coolstore
  name: inventory
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deploymentconfig: inventory
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: inventory
        deploymentconfig: inventory
      name: inventory
    spec:
      containers:
      - env:
        - name: OPENSHIFT_KUBE_PING_LABELS
          value: application=inventory
        - name: OPENSHIFT_KUBE_PING_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: MQ_CLUSTER_PASSWORD
          value: 7mzX0pLV03
        - name: JGROUPS_CLUSTER_PASSWORD
          value: CqUo3fYDTv
        - name: AUTO_DEPLOY_EXPLODED
          value: "false"
        - name: DB_SERVICE_PREFIX_MAPPING
          value: inventory-postgresql=DB
        - name: DB_JNDI
          value: java:jboss/datasources/InventoryDS
        - name: DB_USERNAME
          value: userrPu
        - name: DB_PASSWORD
          value: P3ekw0SA
        - name: DB_DATABASE
          value: inventorydb
        image: image-registry.openshift-image-registry.svc:5000/coolstore/inventory
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /opt/eap/bin/jboss-cli.sh
              - -c
              - :shutdown(timeout=60)
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: inventory
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8888
          name: ping
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 75
