coolstore/base/review-postgresql-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: review
    comp-type: database
    demo: coolstore-microservice
    template: coolstore
  name: review-postgresql
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deploymentconfig: review-postgresql
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    type: Recreate
  template:
    metadata:
      labels:
        app: review
        comp-type: database
        deploymentconfig: review-postgresql
      name: review-postgresql
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: userKsD
        - name: POSTGRESQL_PASSWORD
          value: LcwIxx1t
        - name: POSTGRESQL_DATABASE
          value: review
        image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        name: review-postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
              'SELECT 1'
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: review-postgresql-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 60
      volumes:
      - name: review-postgresql-data
