coolstore/base/cart-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cart
    demo: coolstore-microservice
    template: coolstore
  name: cart
spec:
  ports:
  - port: 8080
  selector:
    deploymentconfig: cart
