coolstore/base/catalog-mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catalog
    demo: coolstore-microservice
    template: coolstore
  name: catalog-mongodb
spec:
  clusterIP: 172.30.31.198
  clusterIPs:
  - 172.30.31.198
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: mongo
    port: 27017
  selector:
    deploymentconfig: catalog-mongodb
