coolstore/base/inventory-postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inventory
    demo: coolstore-microservice
    template: coolstore
  name: inventory-postgresql
spec:
  ports:
  - port: 5432
  selector:
    deploymentconfig: inventory-postgresql
