coolstore/base/pricing-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The pricing service's http port.
  labels:
    app: pricing
    demo: coolstore-microservice
    template: coolstore
  name: pricing
spec:
  ports:
  - port: 8080
  selector:
    deploymentconfig: pricing
