coolstore/base/rating-mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rating
    demo: coolstore-microservice
    template: coolstore
  name: rating-mongodb
spec:
  ports:
  - name: mongo
    port: 27017
  selector:
    deploymentconfig: rating-mongodb
