coolstore/base/rating-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/dependencies: '[{"name":"rating-mongodb","namespace":"","kind":"Service"}]'
  labels:
    app: rating
    demo: coolstore-microservice
    template: coolstore
  name: rating
spec:
  ports:
  - port: 8080
  selector:
    deploymentconfig: rating
