coolstore/base/review-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: review
    demo: coolstore-microservice
    template: coolstore
  name: review-postgresql
spec:
  ports:
  - port: 5432
  selector:
    deploymentconfig: review-postgresql
