coolstore/base/review-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/dependencies: '[{"name":"review-postgresql","namespace":"","kind":"Service"}]'
  labels:
    app: review
    demo: coolstore-microservice
    template: coolstore
  name: review
spec:
  ports:
  - port: 8080
  selector:
    deploymentconfig: review
