coolstore/base/turbine-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netflix
    component: turbine-server
    demo: coolstore-microservice
    template: coolstore
  name: turbine-server
spec:
  ports:
  - name: 80-tcp
    port: 80
    targetPort: 8080
  selector:
    app: netflix
    component: turbine-server
    deploymentconfig: turbine-server
