coolstore/base/hystrix-dashboard-rt.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: netflix
    component: hystrix-dashboard
    demo: coolstore-microservice
    template: coolstore
  name: hystrix-dashboard
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hystrix-dashboard
    weight: 100
  wildcardPolicy: None
